--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "running-tests-using-travis-and-saucelabs",
   "version": "1.0.0",
 	"scripts": {
-    		"test":  "testcafe -b saucelabs && testcafe saucelabs:Chrome test.js"
+    		"test":  "testcafe saucelabs:chrome,saucelabs:safari,saucelabs:firefox,\"saucelabs:Internet Explorer@11.0:Windows 7\" test.js"
 	},
 	"devDependencies": {
     "testcafe": "*",
