--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "running-tests-using-travis-and-saucelabs",
    "version": "1.0.0",
    "scripts": {
-      "test": "testcafe \"saucelabs:Internet Explorer@11.0:Windows 7\" test.js && testcafe saucelabs:chrome *.js"
+      "test": "testcafe \"saucelabs:Internet Explorer@11.0:Windows 7\" *.js && testcafe saucelabs:chrome *.js"
    },
    "devDependencies": {
       "testcafe": "*",
